@@ -49,7 +49,7 @@ li a:hover {
 
 
 #footer {
-   position:absolute;
+   position:fixed;
    bottom:0;
    width:100%;
    height:60px;
